# ichimiginikarasu

./: .gitignore  LICENSE  README.md  gakuseini  haskelling.cabal  ichimiginikarasu.cabal  issues  jlpt2  jlpt3  jlpt4  jlpt5  kanjikakitai1  kanjikakitai2  kanjikakitai3  make_levels.sh  papera3_landscape.cfg  papera3_portrait.cfg  stack.yaml
app/: Main.hs
examples/en/: jlpt1.tex  jlpt2.tex  jlpt3.tex  jlpt4.tex  jlpt5.tex  level_10.tex  level_2.tex  level_3.tex  level_4.tex  level_5.tex  level_6.tex  level_7.tex  level_8.tex  level_9.tex  level_pre2.tex
examples/fr/: jlpt1_fr.tex  jlpt2_fr.tex  jlpt3_fr.tex  jlpt4_fr.tex  level_10_fr.tex  level_2_fr.tex  level_3_fr.tex  level_4_fr.tex  level_5_fr.tex  level_6_fr.tex  level_7_fr.tex  level_8_fr.tex  level_9_fr.tex  level_pre2_fr.tex
resources/: freq_list_Hiroshi_Utsumi.txt  freq_list_Michiel_Kamermans.txt  freq_list_lane_mcdonald.txt  jpn_words  jpn_words_10000  jpn_words_15000  jpn_words_KG6_all.utf8  jpn_words_KG_all.utf8  jpn_words_girardi_kelly  jyouyou__strokeEditDistance.csv  kradfile-u_haskelled  radicals_haskelled  radicals_haskelled_fr  template.tex  template_flashcard.tex  template_flashcard_debug.tex  template_flashcard_tex  template_flashcard_tex_debug  template_tex
resources/kanji_vg/: 053ae.pdf_tex  05b66_frames.pdf_tex  066fc_frames.pdf_tex  0751f_frames.pdf_tex
sets/: jlpt1  level_10  level_2  level_3  level_4  level_5  level_6  level_7  level_8  level_9  level_pre2
src/: Compounds.hs  FlashcardsTex.hs  Kanjidic.hs  Radicals.hs  Similar.hs  Types.hs  XmlHelper.hs
