name:                ichimiginikarasu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/makemeunsee/ichimiginikarasu
license:             BSD3
license-file:        LICENSE
author:              makemeunsee
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ichimiginikarasu-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xml
                     , containers
                     , MissingH
                     , optparse-applicative
                     , process
                     , ichimiginikarasu
  default-language:    Haskell2010

test-suite ichimiginikarasu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ichimiginikarasu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/makemeunsee/ichimiginikarasu
